calendar and some restructuring and css

--- a/about.html
+++ b/about.html
@@ -5,34 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <!-- dürfen wir google fonts und icons nutzen? -->
     <script src="app.js" defer></script>
     <script src="inputDetails.js"></script>
-    <title>Document</title>
+    <title></title>
   </head>
   <body>
     <header class="header-details"></header>
     <main class="main-details">
-      <div class="">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="description-wrapper">
-        <article></article>
-      </div>
-      <div class="landlord-wrapper">
-        <div class="landlord-img-wrapper">
-          <img src="" alt="" />
-        </div>
-        <p></p>
-        <p></p>
-        <p></p>
-      </div>
-      <div class="features-wrapper"></div>
-      <div class="calendar-wrapper"></div>
-      <iframe src="" frameborder="0"></iframe>
-      <div class="reviews-wrapper"></div>
+      <div class="details-div"></div>
+      <div class="review-div"></div>
     </main>
     <footer></footer>
   </body>
