--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <title>Ferienwohnungen Nordseeinseln</title>
   </head>
   <body>
-    <header><h1>Ferienwohnungen auf den Nordseeinseln</h1></header>
+    <header class="header-details">
+      <div class="logo">
+        <img src="lupe.png" alt="Logo" />
+        <p>Ferienhäuser - gesucht und gefunden</p>
+      </div>
+    </header>
     <main>
+      <h1>Ferienwohnungen auf den Nordseeinseln</h1>
       <div class="fewo-list-item-wrapper">
         <img
           src="https://www.dansk.de/media/dzdg3aqt/ferienhaus-sus12-0227-001.jpg?rxy=0.4179052607010677,0.60796633573241377&width=576&height=320&rnd=132785854224070000"
@@ -81,5 +87,6 @@
         <a href="./about.html?id=5" class="details-btn"> mehr anzeigen</a>
       </div>
     </main>
+    <footer>Made with ❤️ | by Katharina and Jane</footer>
   </body>
 </html>
