--- a/about.html
+++ b/about.html
@@ -10,16 +10,54 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <!-- dürfen wir google fonts und icons nutzen? -->
+    <!-- Icon by Pause08 von flaticon.com -->
     <script src="app.js" defer></script>
     <script src="inputDetails.js"></script>
+    <script src="calendar.js"></script>
     <title></title>
   </head>
   <body>
-    <header class="header-details"></header>
-    <main class="main-details">
-      <div class="details-div"></div>
-      <div class="review-div"></div>
+    <header class="header-details">
+      <div class="logo">
+        <img src="lupe.png" alt="Logo" />
+        <p>Ferienhäuser - gesucht und gefunden</p>
+      </div>
+      <nav>
+        <a href="index.html">Zur Übersicht</a>
+      </nav>
+    </header>
+    <main>
+      <div class="details-div">
+        <div class="info-left">
+          <div class="fewo-header"></div>
+          <div class="img-wrapper"></div>
+          <div class="characteristics-wrapper"></div>
+          <div class="description-wrapper"></div>
+          <div class="features-wrapper"></div>
+          <div class="location">
+            <iframe
+              width="100%"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+              src="https://www.openstreetmap.org/export/embed.html?bbox=8.311023116111757%2C54.93120129786425%2C8.318104147911074%2C54.933919687031&amp;layer=mapnik&amp;marker=54.93256081770243%2C8.314564649999966"
+              style="border: 1px solid #a0d995"
+            ></iframe
+            ><a
+              href="https://www.openstreetmap.org/?mlat=54.93256&amp;mlon=8.31456#map=18/54.93256/8.31456"
+              >Größere Karte anzeigen</a
+            >
+          </div>
+        </div>
+        <div class="info-right">
+          <div class="calendar-price"></div>
+          <div class="host-div"></div>
+        </div>
+      </div>
+      <div class="reviews-div"></div>
+      <a class="back-btn" href="index.html">Zurück zur Übersicht</a>
     </main>
-    <footer></footer>
+    <footer>Made with ❤️ | by Katharina and Jane</footer>
   </body>
 </html>
