--- a/about.html
+++ b/about.html
@@ -20,13 +20,12 @@
     <header class="header-details">
       <div class="logo">
         <img src="lupe.png" alt="Logo" />
-        <p>Ferienhäuser - gesucht und gefunden</p>
       </div>
       <nav>
         <a href="index.html">Zur Übersicht</a>
       </nav>
     </header>
-    <main>
+    <main class="about-main">
       <div class="details-div">
         <div class="info-left">
           <div class="fewo-header"></div>
