--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <!-- dürfen wir google fonts und icons nutzen? -->
     <!-- Icon by Pause08 von flaticon.com -->
     <script src="app.js" defer></script>
-    <script src="inputDetails.js"></script>
-    <script src="calendar.js"></script>
+    <script src="inputDetails.js" defer></script>
+    <script src="calendar.js" defer></script>
     <title></title>
   </head>
   <body>
