first instance of parser

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="app.js" defer></script>
+    <script src="inputDetails.js" defer></script>
+    <script src="calendar.js" defer></script>
+    <script src="csvToJson.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
+      integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>Ferienwohnungen Nordseeinseln</title>
   </head>
   <body>
@@ -15,7 +24,7 @@
       </div>
     </header>
     <main>
-        <h1>Ferienwohnungen auf den Nordseeinseln</h1>
+      <h1>Ferienwohnungen auf den Nordseeinseln</h1>
       <div class="fewo-list">
         <div class="fewo-list-item-wrapper">
           <img
