--- a/about.html
+++ b/about.html
@@ -13,6 +13,13 @@
     <script src="app.js" defer></script>
     <script src="inputDetails.js" defer></script>
     <script src="calendar.js" defer></script>
+    <script src="csvToJson.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
+      integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title></title>
   </head>
   <body>
