--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <!-- Icon by Pause08 von flaticon.com -->
-    <script src="app.js" defer></script>
-    <script src="inputDetails.js" defer></script>
-    <script src="calendar.js" defer></script>
-    <script src="csvToJson.js" defer></script>
+    <script src="js/app.js" defer></script>
+    <script src="js/csvToJson.js" defer></script>
+    <script src="js/about.js" defer></script>
+    <script src="js/calendar.js" defer></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
       integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
@@ -31,7 +31,7 @@
   <body>
     <header class="header-details">
       <div class="logo">
-        <img src="lupe.png" alt="Logo" />
+        <img src="assets/lupe.png" alt="Logo" />
       </div>
       <nav>
         <a href="index.html">Zur Übersicht</a>
