--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="info-right">
-          <div class="calendar-price"></div>
+          <div class="calendar-wrapper"></div>
           <div class="host-div"></div>
         </div>
       </div>
