--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main>
-      <h1>Ferienwohnungen in Amsterdam</h1>
+      <h1>Ferienwohnungen in Salem</h1>
       <div class="fewo-list"></div>
     </main>
     <footer>Made with ❤️ | by Katharina and Jane</footer>
