--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="js/app.js" defer></script>
     <script src="js/csvToJson.js" defer></script>
@@ -74,7 +78,17 @@
           Filtern
         </button>
       </div>
-      <div class="fewo-list"></div>
+      <div class="fewo-list-sort">
+        <div class="sort">
+          <div class="sort-review">
+            <p>Bewertungen</p>
+          </div>
+          <div class="sort-price">
+            <p>Preis</p>
+          </div>
+        </div>
+        <div class="fewo-list"></div>
+      </div>
     </main>
     <footer>Made with ❤️ | by Katharina and Jane</footer>
   </body>
