--- a/index.html
+++ b/index.html
@@ -80,12 +80,8 @@
       </div>
       <div class="fewo-list-sort">
         <div class="sort">
-          <div class="sort-review">
-            <p>Bewertungen</p>
-          </div>
-          <div class="sort-price">
-            <p>Preis</p>
-          </div>
+          <div class="sort-review"></div>
+          <div class="sort-price"></div>
         </div>
         <div class="fewo-list"></div>
       </div>
