--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="icon" type="image/png" href="assets/lupe.png" />
     <!-- Icon by Pause08 von flaticon.com -->
     <script src="js/app.js" defer></script>
     <script src="js/csvToJson.js" defer></script>
@@ -47,18 +48,15 @@
           <div class="features-wrapper"></div>
           <div class="location">
             <iframe
+              id="small-map"
               width="100%"
               frameborder="0"
               scrolling="no"
               marginheight="0"
               marginwidth="0"
-              src="https://www.openstreetmap.org/export/embed.html?bbox=8.311023116111757%2C54.93120129786425%2C8.318104147911074%2C54.933919687031&amp;layer=mapnik&amp;marker=54.93256081770243%2C8.314564649999966"
               style="border: 1px solid #a0d995"
             ></iframe
-            ><a
-              href="https://www.openstreetmap.org/?mlat=54.93256&amp;mlon=8.31456#map=18/54.93256/8.31456"
-              >Größere Karte anzeigen</a
-            >
+            ><a id="big-map">Größere Karte anzeigen</a>
           </div>
         </div>
         <div class="info-right">
