--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <title>Ferienwohnungen</title>
+    <link rel="icon" type="image/png" href="assets/lupe.png" />
   </head>
   <body>
     <header class="header-details">
